# hydro_benchmarks

./: Cargo.toml  analytics_plans.ipynb  requirements.txt  rust-toolchain.toml
base/: Cargo.toml
base/src/: kmeans_baseline.rs  lib.rs  matrix_vector_multiply.rs  point.rs  vectorized_sum.rs
base/src/nexmark/: README.md  mod.rs  query_1.rs  query_2.rs  query_3.rs  query_4.rs  query_5.rs  query_6.rs  query_7.rs  query_8.rs
base/src/tpch/: initialize.rs  mod.rs  query_1.rs  query_19.rs  query_4.rs  util.rs
flow/: Cargo.toml
flow/examples/: kmeans_baseline.rs  query_4.rs  query_4_distributed.rs
flow/src/: first_ten.rs  first_ten_distributed.rs  kmeans_deep_hfp.rs  kmeans_shallow_hfp.rs  lib.rs  multiply_MM_hfp.rs
flow/src/tpch/: mod.rs  query_4.rs  query_4_distributed.rs
flow_macro/: Cargo.toml
hydro_local_benchmarks/: Cargo.toml
hydro_local_benchmarks/benches/: kmeans.rs  matrix_vector.rs  tpch.rs  vectorized_sum.rs
hydroflow_base/: Cargo.toml
hydroflow_base/benches/: byname.rs
hydroflow_base/examples/: kmeans_hf.rs
hydroflow_base/src/: kmeans_hf.rs  lib.rs  matrix_vector_multiply.rs  vectorized_sum.rs
hydroflow_base/src/nexmark/: sliding_window.rs
hydroflow_base/src/tpcc/: byname.rs  mod.rs
hydroflow_base/src/tpch/: mod.rs  query_1.rs  query_19.rs  query_4.rs
